<resources>
    <string name="app_name">Al Fattah</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_quiz">Quiz</string>
    <string name="menu_leader">Leadership borad</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_share">Share</string>
    <string name="menu_feedback">Feedback</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_home">Home</string>

</resources>
